// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traverseDependencyTree should handle broken dependency tree 1`] = `
[
  {
    "invalid": undefined,
    "name": "package-b",
    "path": undefined,
    "version": "1.1.0",
  },
  {
    "invalid": undefined,
    "name": "package-c",
    "path": undefined,
    "version": "1.2.0",
  },
  {
    "invalid": undefined,
    "name": "package-f",
    "path": [
      {
        "name": "package-c",
        "version": "1.2.0",
      },
    ],
    "version": "1.0.122",
  },
]
`;

exports[`traverseDependencyTree should traverse dependency tree 1`] = `
[
  {
    "invalid": undefined,
    "name": "package-a",
    "path": undefined,
    "version": "1.0.0",
  },
  {
    "invalid": undefined,
    "name": "package-b",
    "path": [
      {
        "name": "package-a",
        "version": "1.0.0",
      },
    ],
    "version": "1.1.0",
  },
  {
    "invalid": undefined,
    "name": "package-c",
    "path": [
      {
        "name": "package-a",
        "version": "1.0.0",
      },
      {
        "name": "package-b",
        "version": "1.1.0",
      },
    ],
    "version": "1.2.0",
  },
  {
    "invalid": undefined,
    "name": "package-x",
    "path": undefined,
    "version": "2.0.0",
  },
  {
    "invalid": undefined,
    "name": "package-y",
    "path": [
      {
        "name": "package-x",
        "version": "2.0.0",
      },
    ],
    "version": "3.0.0",
  },
  {
    "invalid": undefined,
    "name": "package-z",
    "path": [
      {
        "name": "package-x",
        "version": "2.0.0",
      },
      {
        "name": "package-y",
        "version": "3.0.0",
      },
    ],
    "version": "4.0.0",
  },
  {
    "invalid": undefined,
    "name": "package-c",
    "path": undefined,
    "version": "1.2.0",
  },
  {
    "invalid": undefined,
    "name": "package-d",
    "path": undefined,
    "version": "1.3.0",
  },
  {
    "invalid": undefined,
    "name": "package-a",
    "path": [
      {
        "name": "package-d",
        "version": "1.3.0",
      },
    ],
    "version": "1.0.1",
  },
]
`;
